<resources>
    <string name="app_name">CMPLR</string>
    <string name="signup_text">Sign up</string>
    <string name="login_text">Log in</string>
    <string name="intro1_text">Explore</string>
    <string name="intro1_text2">mind-blowing stuff.</string>
    <string name="intro2_text">Follow Cmplrs that spark your interests.</string>
    <string name="intro3_text">Customize how you look, be who you want</string>
    <string name="intro4_text">Post anything: Text,GIFs,music,whatever.</string>
    <string name="intro5_text">Welcome to Cmplr. Now push the button.</string>
    <string name="login_email">Log in with Email</string>
    <string name="login_google">Log in with Google</string>
    <string name="intro">CMPLR</string>
    <string name="signup_btn">Sign up with Email</string>
    <string name="signup_google_btn">Sign up with Google</string>
    <string name="mock_username">cmplr user</string>
    <string name="note_hint">Say something nice</string>
    <string name="random_comment">It is a random comment to test recycle layout</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email</string>
    <string name="password_hints">pass</string>
    <string name="showPassword">Show Password</string>
    <string name="forgot">Forgot your password?</string>
    <string name="login">Log in</string>
    <string name="login_underline"><u>Log in</u></string>
    <string name="signup_name">name</string>
    <string name="signup_name_hint">name</string>
    <string name="already_have">Already have an account?</string>
    <string name="done">Done</string>
    <string name="what_should">What should we call \n you?</string>
    <string name="why_name">You\'ll beed a name to make \n your own posts, customize \n your blog, and message\n people</string>
    <string name="forgot_text">Forgot your password? It happens. \n We\'ll send you a link to reset it.</string>
    <string name="submit">Submit</string>
    <string name="logo_description">the logo of tumblr</string>
    <!-- file names, search keys and similar -->
    <string name="global_app_state_file">GASfile</string>
    <string name="curr_user_GAS_search_key">curr user</string>
    <string name="user_ID_Intent_search_key">user ID</string>
    <string name="user_posts_file">userPostsForUser</string>

    <!-- UI text -->
    <string name="signUpButtonText">Sign Up</string>
    <string name="loginButtonText">Login</string>
    <string name="agePromptText">"Your age is "</string>
    <string name="ageFieldHint">Must be 13 or more, sorry !</string>
    <string name="writePostHint">Add something, if you will.</string>
    <string name="Post">Make a post</string>

    <!-- Messages text -->
    <string name="errorMsgIfAgeIsLessThan13">"Sorry kid !, can't make an account with an age less than 13"</string>
    <string name="successMsgIfAgeIs13">Welcome to cmplr ! Enjoy your stay</string>
    <string name="errorMsgIfInvalidNumberFormat">"Hmm, this doesn't seem like a number. Try Again."</string>
    <string name="errorMsgIfNoValidUserID">Authentication error, please login or signup first</string>
    <string name="confirmPost">Post</string>
    <string name="age_text">You\'re almost done. Enter your age, then tap Next button.</string>
    <string name="age_hint">How old are you?</string>
    <string name="next_age_screen">Next</string>
<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<AUTO GENERATED BY CONFLICT EXTENSION<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< main
    <string name="search_input">Search Tumblr</string>
====================================AUTO GENERATED BY CONFLICT EXTENSION====================================



    <!--DUMMY DATA -->
    <string name="dummy_big_text">AAAAAAAAAAAAAAAAAA</string>
>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>AUTO GENERATED BY CONFLICT EXTENSION>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> home_screen
</resources>