<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/agePromptText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/agePromptTV"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.16"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"/>
        <Button
                android:text="@string/signUpButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/signupBtn"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <EditText
                android:layout_width="240dp"
                android:layout_height="41dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/ageField"
                app:layout_constraintStart_toEndOf="@+id/agePromptTV" android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="104dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428" android:hint="@string/ageFieldHint"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>